MDEV-29639: Seconds_Behind_Master is incorrect for Delayed, Parallel Replicas

Problem:
========
On a parallel, delayed replica, Seconds_Behind_Master will not be
calculated until after MASTER_DELAY seconds have passed and the
event has finished executing, resulting in potentially very large
values of Seconds_Behind_Master for the entire duration of
MASTER_DELAY. This is especially prevalent for workloads with
infrequent transactions.

Solution:
========
Treat replicas using both parallelization and master_delay as an
edge case to force the serial method of updating
Seconds_Behind_Master. Effectively, this means the value will seem
more recent than the true state of the replica for both long running
transactions and workers with long queues. This will be fixed after
MDEV-17516.

Reviewed By:
============
<TODO>